syntax = "proto3";

package routeguide;

service RouteGuide {
    // We'll have the 4 rpc service methods..

    rpc GetFeature (Point) returns (Feature){}
    rpc ListFeatures (Rectangle) returns (stream Feature) {}
    rpc RecordRoute (stream Point) returns (RouteSummary) {}
    rpc RouteChat (stream RouteNote) returns (stream RouteNote) {}
    }


message Point {
    int32 latitude = 1;
    int32 longitude = 2;
}

message Rectangle {
    Point lo = 1;
    Point hi = 2;
}

message Feature {
    Point location = 1;
}

message RouteSummary {
    int32 point_count = 1;
    int32 feature_count = 2;
    int32 distance = 3; // in meters
    int32 elapsed_time = 4; // in seconds
}

message RouteNote {
    Point location = 1;
    string message = 2;
    }
